# mcp_flight_booking

./: .env.example  .gitignore  README.md  SECURITY.md  claude_desktop_config.json  pyproject.toml
config/: claude_desktop_config.example.md
docs/: LOGGING_GUIDE.md  OAUTH_ARCHITECTURE.md
src/flight_booking_mcp/: __init__.py  authenticated_api.py  resources.py  server.py  tools.py
src/flight_booking_mcp/auth/: __init__.py  mcp_safe_auth.py  oauth_server.py  token_validator.py  vscode_auth_provider.py
src/flight_booking_mcp/config/: auth_config.py  mcp_config.py
src/flight_booking_mcp/data/: airports.json  airports.txt
src/flight_booking_mcp/models/: __init__.py  api_models.py
src/flight_booking_mcp/services/: __init__.py  flight_service.py
